# classification

./: .cruft.json  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yaml  docs.yaml  mypy.yaml
src/classifier/: data.py  model.py
